--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
     externalNativeBuild {
         cmake {
             path 'CMakeLists.txt'
@@ -51,41 +54,47 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.6.2"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.6.2"
-    implementation "com.squareup.retrofit2:converter-gson:2.6.2"
-    implementation 'com.squareup.retrofit2:converter-moshi:2.6.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
-    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.12.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.8.1'
+
+    //
+    // Warning! do not upgrade this beyond 4.4.x as 4.5.0 brings in websocket compression
+    // which for whatever reason causes issues.
+    //
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.1'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.4.1'
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 
-    implementation 'com.squareup.moshi:moshi-adapters:1.6.0'
+    implementation 'com.squareup.moshi:moshi-adapters:1.9.2'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
 
     // rxandroid
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
-    implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
+    implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
 
     implementation "android.arch.work:work-runtime-ktx:1.0.1"
     implementation "android.arch.work:work-rxjava2:1.0.1"
 
-    implementation 'com.facebook.stetho:stetho:1.5.0'
-    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 
     // groupie
     implementation 'com.xwray:groupie:2.7.1'
     implementation 'com.xwray:groupie-kotlin-android-extensions:2.7.1'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha04'
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.emoji:emoji-appcompat:1.0.0'
     implementation 'androidx.emoji:emoji:1.0.0'
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
 
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 
@@ -96,26 +105,26 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     }
 
-    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
 
     implementation 'br.com.simplepass:loading-button-android:2.1.5'
-    implementation 'com.google.firebase:firebase-core:17.2.2'
+    implementation 'com.google.firebase:firebase-core:17.3.0'
 
-    implementation 'io.noties.markwon:core:4.2.1'
+    implementation 'io.noties.markwon:core:4.3.1'
 
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
-    kapt 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
-    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
+    testImplementation 'junit:junit:4.13'
 
     implementation "androidx.core:core-ktx:1.2.0"
 
-    implementation 'androidx.room:room-runtime:2.2.3'
-    implementation 'androidx.room:room-rxjava2:2.2.3'
-    kapt 'androidx.room:room-compiler:2.2.3'
+    implementation 'androidx.room:room-runtime:2.2.5'
+    implementation 'androidx.room:room-rxjava2:2.2.5'
+    kapt 'androidx.room:room-compiler:2.2.5'
 }
 repositories {
     mavenCentral()
