--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,9 +119,6 @@ dependencies {
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
-    testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
-    testImplementation 'junit:junit:4.13'
-
     implementation "org.koin:koin-androidx-viewmodel:2.1.5"
 
     implementation "androidx.core:core-ktx:1.2.0"
@@ -132,6 +129,16 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
 
     kapt 'androidx.room:room-compiler:2.2.5'
+
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.2.0'
+
+    testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
+    testImplementation 'junit:junit:4.13'
+
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
 }
 repositories {
     mavenCentral()
