--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.squareup.retrofit2:converter-moshi:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.8.1'
 
     //
     // Warning! do not upgrade this beyond 4.4.x as 4.5.0 brings in websocket compression
@@ -131,6 +132,8 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.2.5'
 
     implementation 'androidx.test.espresso:espresso-idling-resource:3.2.0'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
     testImplementation 'junit:junit:4.13'
