--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'io.fabric'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'koin'
 
 android {
@@ -89,7 +89,7 @@ dependencies {
     implementation 'com.xwray:groupie:2.7.1'
     implementation 'com.xwray:groupie-kotlin-android-extensions:2.7.1'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha06'
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.emoji:emoji-appcompat:1.0.0'
@@ -117,16 +117,16 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-
     implementation "org.koin:koin-androidx-viewmodel:2.1.5"
 
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
     implementation "androidx.core:core-ktx:1.2.0"
 
     implementation 'androidx.room:room-runtime:2.2.5'
     implementation 'androidx.room:room-rxjava2:2.2.5'
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
+    implementation 'com.github.cpiz:BubbleView:1.0.3'
 
     kapt 'androidx.room:room-compiler:2.2.5'
 
