--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,6 +132,8 @@ dependencies {
 
     implementation 'androidx.test.espresso:espresso-idling-resource:3.2.0'
 
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
     testImplementation 'junit:junit:4.13'
     testImplementation 'org.koin:koin-test:2.1.5'
