--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.8.1'
 
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
+    implementation 'com.facebook.android:facebook-android-sdk:7.1.0'
+
     //
     // Warning! do not upgrade this beyond 4.4.x as 4.5.0 brings in websocket compression
     // which for whatever reason causes issues.
