--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'koin'
@@ -34,6 +33,15 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
+        useIR = true
+    }
+    buildFeatures {
+        compose true
+        viewBinding true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerVersion kotlin_version
     }
     externalNativeBuild {
         cmake {
@@ -42,24 +50,17 @@ android {
     }
 }
 
-// IMPORTANT!  Enables view caching in viewholders.
-// See: https://github.com/Kotlin/KEEP/blob/master/proposals/android-extensions-entity-caching.md
-androidExtensions {
-    experimental = true
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.8.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
-    implementation 'com.google.android.gms:play-services-auth:18.1.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     //
     // Warning! do not upgrade this beyond 4.4.x as 4.5.0 brings in websocket compression
     // which for whatever reason causes issues.
@@ -68,7 +69,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.4.1'
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 
-    implementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
+    implementation 'com.squareup.moshi:moshi-adapters:1.11.0'
 
     // rxandroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -77,8 +79,8 @@ dependencies {
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
 
-    implementation "androidx.work:work-runtime-ktx:2.3.4"
-    implementation "androidx.work:work-rxjava2:2.3.4"
+    implementation "androidx.work:work-runtime-ktx:2.4.0"
+    implementation "androidx.work:work-rxjava2:2.4.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
@@ -86,16 +88,17 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 
     // groupie
-    implementation 'com.xwray:groupie:2.7.1'
-    implementation 'com.xwray:groupie-kotlin-android-extensions:2.7.1'
+    implementation 'com.xwray:groupie:2.8.1'
+    implementation 'com.xwray:groupie-viewbinding:2.8.1'
 
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.3.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.emoji:emoji-appcompat:1.0.0'
-    implementation 'androidx.emoji:emoji:1.0.0'
+    implementation 'androidx.emoji:emoji-appcompat:1.1.0'
+    implementation 'androidx.emoji:emoji:1.1.0'
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
-
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 
@@ -106,43 +109,48 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     }
 
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
 
     implementation 'br.com.simplepass:loading-button-android:2.1.5'
-    implementation 'com.google.firebase:firebase-core:17.3.0'
+    implementation 'com.google.firebase:firebase-core:18.0.0'
 
     implementation 'io.noties.markwon:core:4.3.1'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-    implementation "org.koin:koin-androidx-viewmodel:2.1.5"
+    implementation "org.koin:koin-androidx-viewmodel:2.2.1"
 
-    implementation "com.android.billingclient:billing-ktx:3.0.1"
+    implementation "com.android.billingclient:billing-ktx:3.0.2"
 
-    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
-    implementation "androidx.core:core-ktx:1.2.0"
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
+    implementation "androidx.core:core-ktx:1.3.2"
 
-    implementation 'androidx.room:room-runtime:2.2.5'
-    implementation 'androidx.room:room-rxjava2:2.2.5'
+    implementation 'androidx.room:room-runtime:2.2.6'
+    implementation 'androidx.room:room-rxjava2:2.2.6'
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
     implementation 'com.github.cpiz:BubbleView:1.0.3'
 
-    kapt 'androidx.room:room-compiler:2.2.5'
+    kapt 'androidx.room:room-compiler:2.2.6'
 
-    implementation 'androidx.test.espresso:espresso-idling-resource:3.2.0'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
-    testImplementation 'junit:junit:4.13'
-    testImplementation 'org.koin:koin-test:2.1.5'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'org.koin:koin-test:2.2.1'
 
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
 }
 repositories {
     mavenCentral()
