--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.2"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.2"
+    implementation "androidx.core:core-ktx:1.5.0-beta01"
 
     // rxandroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
