--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,14 @@ android {
     }
 }
 
+// compose alpha 12 wants this
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs += ["-Xallow-jvm-ir-dependencies"]
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -73,8 +81,8 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
     implementation 'com.squareup.moshi:moshi-adapters:1.11.0'
 
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.2"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.2"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
     implementation "androidx.core:core-ktx:1.5.0-beta01"
 
     // rxandroid
@@ -84,8 +92,8 @@ dependencies {
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
 
-    implementation "androidx.work:work-runtime-ktx:2.4.0"
-    implementation "androidx.work:work-rxjava2:2.4.0"
+    implementation "androidx.work:work-runtime-ktx:2.5.0"
+    implementation "androidx.work:work-rxjava2:2.5.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
@@ -96,13 +104,13 @@ dependencies {
     implementation 'com.xwray:groupie:2.8.1'
     implementation 'com.xwray:groupie-viewbinding:2.8.1'
 
-    implementation 'com.google.android.material:material:1.3.0-beta01'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.emoji:emoji-appcompat:1.1.0'
     implementation 'androidx.emoji:emoji:1.1.0'
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
@@ -121,19 +129,19 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
 
     implementation 'br.com.simplepass:loading-button-android:2.1.5'
-    implementation 'com.google.firebase:firebase-core:18.0.0'
+    implementation 'com.google.firebase:firebase-core:18.0.2'
 
     implementation 'io.noties.markwon:core:4.3.1'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation "org.koin:koin-androidx-viewmodel:2.2.1"
 
     implementation "com.android.billingclient:billing-ktx:3.0.2"
 
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
     implementation "androidx.core:core-ktx:1.3.2"
 
     implementation 'androidx.room:room-runtime:2.2.6'
