--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // retrofit
@@ -81,9 +81,9 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
     implementation 'com.squareup.moshi:moshi-adapters:1.11.0'
 
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
-    implementation "androidx.core:core-ktx:1.5.0-beta01"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+    implementation "androidx.core:core-ktx:1.6.0-beta02"
 
     // rxandroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -92,8 +92,8 @@ dependencies {
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
 
-    implementation "androidx.work:work-runtime-ktx:2.5.0"
-    implementation "androidx.work:work-rxjava2:2.5.0"
+    implementation "androidx.work:work-runtime-ktx:2.6.0-beta01"
+    implementation "androidx.work:work-rxjava2:2.6.0-beta01"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
@@ -110,7 +110,7 @@ dependencies {
     implementation 'androidx.emoji:emoji-appcompat:1.1.0'
     implementation 'androidx.emoji:emoji:1.1.0'
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
@@ -129,35 +129,35 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
 
     implementation 'br.com.simplepass:loading-button-android:2.1.5'
-    implementation 'com.google.firebase:firebase-core:18.0.2'
+    implementation 'com.google.firebase:firebase-core:19.0.0'
 
     implementation 'io.noties.markwon:core:4.3.1'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation "org.koin:koin-androidx-viewmodel:2.2.1"
 
     implementation "com.android.billingclient:billing-ktx:3.0.2"
 
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
-    implementation "androidx.core:core-ktx:1.3.2"
+    implementation 'com.google.firebase:firebase-crashlytics:18.0.1'
+    implementation "androidx.core:core-ktx:1.5.0"
 
-    implementation 'androidx.room:room-runtime:2.2.6'
-    implementation 'androidx.room:room-rxjava2:2.2.6'
+    implementation 'androidx.room:room-runtime:2.3.0'
+    implementation 'androidx.room:room-rxjava2:2.3.0'
 
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
     implementation 'com.github.cpiz:BubbleView:1.0.3'
 
-    kapt 'androidx.room:room-compiler:2.2.6'
+    kapt 'androidx.room:room-compiler:2.3.0'
 
     implementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.koin:koin-test:2.2.1'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
