--- a/build.gradle
+++ b/build.gradle
@@ -2,23 +2,23 @@
 
 buildscript {
     ext {
-        compose_version = '1.0.0-alpha12'
-        kotlin_version = '1.4.30'
+        compose_version = '1.0.0-beta08'
+        kotlin_version = "1.5.10"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0-alpha06'
+        classpath 'com.android.tools.build:gradle:7.0.0-beta03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:4.3.5'
+        classpath 'com.google.gms:google-services:4.3.8'
 
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.0'
 
         classpath "org.koin:koin-gradle-plugin:2.2.1"
     }
