--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,7 +137,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-    implementation "org.koin:koin-androidx-viewmodel:2.2.1"
+    implementation "io.insert-koin:koin-android:3.1.0"
 
     implementation "com.android.billingclient:billing-ktx:3.0.2"
 
@@ -158,7 +158,7 @@ dependencies {
 
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.koin:koin-test:2.2.1'
+    testImplementation "io.insert-koin:koin-test-junit4:3.1.0"
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
