--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ android {
 }
 
 dependencies {
+    def koin_version = "3.2.0-beta-1"
+    def play_services_version = "19.2.0"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -71,7 +74,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
-    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation "com.google.android.gms:play-services-auth:$play_services_version"
 
     implementation "io.coil-kt:coil-compose:1.3.2"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
@@ -141,7 +144,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-    implementation "io.insert-koin:koin-android:3.1.0"
+    implementation "io.insert-koin:koin-android:$koin_version"
 
     implementation "com.android.billingclient:billing-ktx:3.0.2"
 
@@ -162,7 +165,7 @@ dependencies {
 
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
     testImplementation 'junit:junit:4.13.2'
-    testImplementation "io.insert-koin:koin-test-junit4:3.1.0"
+    testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
