--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,10 @@ android {
 }
 
 dependencies {
-    def koin_version = "3.2.0-beta-1"
-    def play_services_version = "19.2.0"
+    def koin_version = '3.2.0-beta-1'
+    def play_services_version = '19.2.0'
+    def accompanist_version = '0.24.2-alpha'
+    def room_version = '2.4.2'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -148,16 +150,16 @@ dependencies {
 
     implementation "com.android.billingclient:billing-ktx:3.0.2"
 
-    implementation 'androidx.room:room-runtime:2.4.2'
-    implementation 'androidx.room:room-rxjava2:2.4.2'
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
     implementation 'com.github.cpiz:BubbleView:1.0.3'
 
-    implementation "com.google.accompanist:accompanist-pager:0.23.1"
-    implementation "com.google.accompanist:accompanist-pager-indicators:0.23.1"
+    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
 
-    kapt 'androidx.room:room-compiler:2.4.2'
+    kapt "androidx.room:room-compiler:$room_version"
 
     implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
 
