--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        compose_version = '1.1.1'
+        compose_version = '1.2.0-alpha04'
         kotlin_version = "1.6.10"
     }
     repositories {
