--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,13 @@ apply plugin: 'app.cash.molecule'
 apply plugin: 'com.google.devtools.ksp'
 
 android {
-    compileSdk 33
+    compileSdk 34
     ndkVersion "21.0.6113669"
     defaultConfig {
         applicationId "io.zenandroid.onlinego"
         minSdkVersion 21
-        targetSdkVersion 33
+        //noinspection EditedTargetSdkVersion
+        targetSdkVersion 34
         versionCode 42
         versionName "alpha_b${versionCode}"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -69,7 +70,8 @@ android {
         viewBinding true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.4.3"
+        kotlinCompilerExtensionVersion "1.5.1"
+        kotlinCompilerVersion '1.6.10'
     }
     externalNativeBuild {
         cmake {
@@ -84,13 +86,12 @@ android {
 }
 
 dependencies {
-    def koin_version = '3.2.0'
-    def play_services_version = '20.5.0'
-    def accompanist_version = '0.29.2-rc'
-    def room_version = '2.5.1'
+    def koin_version = '3.4.3'
+    def play_services_version = '20.6.0'
+    def accompanist_version = '0.32.0'
+    def room_version = '2.5.2'
     def firebase_version = '31.2.0'
-    def emoji2_version = "1.3.0"
-    def compose_version = "1.4.2"
+    def compose_version = "1.5.0"
     def work_manager_version = "2.8.1"
 //    def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
 
@@ -120,16 +121,16 @@ dependencies {
     implementation "com.google.android.gms:play-services-auth:$play_services_version"
     implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5"
 
-    implementation "io.coil-kt:coil-compose:2.2.2"
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+    implementation "io.coil-kt:coil-compose:2.4.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 
-    implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
-    implementation 'com.squareup.moshi:moshi-adapters:1.14.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.15.0'
+    implementation 'com.squareup.moshi:moshi-adapters:1.15.0'
 
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
-    implementation "androidx.core:core-ktx:1.10.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.7.1"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.1"
+    implementation "androidx.core:core-ktx:1.10.1"
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
@@ -149,14 +150,11 @@ dependencies {
     implementation 'com.github.lisawray.groupie:groupie:2.9.0'
     implementation 'com.github.lisawray.groupie:groupie-viewbinding:2.8.1'
 
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation "androidx.emoji2:emoji2:$emoji2_version"
-    implementation "androidx.emoji2:emoji2-views:$emoji2_version"
-    implementation "androidx.emoji2:emoji2-views-helper:$emoji2_version"
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
-    implementation "androidx.activity:activity-compose:1.7.0"
+    implementation "androidx.activity:activity-compose:1.7.2"
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 
@@ -200,8 +198,8 @@ dependencies {
     testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
     testImplementation "org.mockito:mockito-inline:3.11.2"
     testImplementation "androidx.arch.core:core-testing:2.2.0"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
-    testImplementation 'app.cash.turbine:turbine:0.12.1'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
+    testImplementation 'app.cash.turbine:turbine:1.0.0'
 
 //    androidTestImplementation composeBom
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
