--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,11 @@ android {
             version "3.10.2"
         }
     }
+    sourceSets {
+        main {
+            assets.srcDirs += file("${project(":engine:katago").buildDir}/bin")
+        }
+    }
     namespace 'io.zenandroid.onlinego'
     packagingOptions {
         resources.excludes.add("META-INF/*")
