--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,6 +173,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
 
     implementation 'io.noties.markwon:core:4.3.1'
+    implementation 'org.jsoup:jsoup:1.16.1'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
