--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,7 @@ dependencies {
 
     implementation "com.google.android.gms:play-services-auth:$play_services_version"
     implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5"
+    implementation "androidx.compose.material3:material3:1.1.2"
 
     implementation "io.coil-kt:coil-compose:2.4.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
